@@ -3,3 +3,4 @@ Hans Petter Selasky <hselasky@FreeBSD.org>
 Jeff Snyder <jeff@caffeinated.me.uk>
 Dan Muresan <danmbox@gmail.com>
 Markus Schmidt <schmidt@boomshop.net>
+AlkorZ3 <alkorz2@rx3.net>
