@@ -1,3 +1,6 @@
+User-visible changes between 2.7.2 and 2.8.0 include:
+ - Drop CMake and now use autotools
+
 User-visible changes between 2.7.1 and 2.7.2 include:
 
 User-visible changes between 2.6 and 2.7.1 include:
